style/style.css
@font-face {
    font-family: 'comic';
    src: url('../font/SHOWG.TTF');
}

body{
    margin: 0 !important;
    padding: 0 !important;
    overflow: hidden !important;

    font-family: 'comic',Arial, Helvetica, sans-serif;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    background: url('../img/5_background/second_half_background.png');
    background-repeat: no-repeat;
    background-size: cover;

    height: 100vh;
    width: 100%;
}

.start-wrapper{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 95%;
    height: 95%;
}

.start{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    overflow: hidden !important;
    z-index: 999;
}

.start.up{
    z-index: 99999;
}

.start-screen{
    width: 720px;
    height: 480px;
    background-size: contain;
}

.control-img{
    margin-top: 24px;
    max-width: 720px;
    height: auto;
}

.story-btn{
    position: relative;
    top:64px;
    left:16px;
}

.btn{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 40px;
    border: none;
    background-color: orange;
    width: 48px;
    height: 48px;
    cursor: pointer;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
    transition: all 0.15s ease-in-out;
}
.btn:hover{
    background-color: #ff8c00;
    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
    transition: all 0.3s ease-in-out;
}

.audio-on{
    background:url('../img/10_sonstiges/audioOn.svg');
    background-repeat: no-repeat;
    background-size: contain;
    width: 32px;
    height: 32px;
}

.audio-off{
    background:url('../img/10_sonstiges/audioOff.svg');
    background-repeat: no-repeat;
    background-size: contain;
    width: 32px;
    height: 32px;
}

.game-btn{
    margin-top: 48px;
    width: 200px;
    height: 40px;
    font-family: 'comic',Arial, Helvetica, sans-serif;
    font-size: 20pt;
    background-color: orange;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
    transition: all 0.15s ease-in-out;
}
#playBtn:hover{
    background-color: #ff8c00;
    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
    transition: all 0.3s ease-in-out;
}

.fullscreen{
    width: 100vw;
    height: 100vh;
}

#fullscreen{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.hide{
    display: none !important;
}

.modal{
    width: 75%;
    height: 75%;
    background-color: tomato;
    color:black;
    z-index: 9999;

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.modal-content{
    width: 80%;
    height: 80%;
}

.modal-content h1{
    font-size: 18pt;
}

.modal-content p{
    font-size: 14pt;
}

.close-btn{
    cursor: pointer;
    position: absolute;
    top:32px;
    right:32px;
    width: 24px;
    height: 24px;
    border-radius: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    transition: all 0.1s ease-in-out;
}
.close-btn:hover{
    transform: scale(1.1);
    background-color: black;
    color: white;
    transition: all 0.3s ease-in-out;
}

.settings-btn{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;
    gap:16px;
    position: absolute;
    bottom:16px;
    right:16px;
    z-index: 9999;
}

.disable-fs{
    background:url('../img/10_sonstiges/full.svg');
    background-repeat: no-repeat;
    background-size: contain;
    width: 32px;
    height: 32px;
}

.activate-fs{
    background:url('../img/10_sonstiges/not-full.svg');
    background-repeat: no-repeat;
    background-size: contain;
    width: 32px;
    height: 32px;
}

.show-controls img{
    max-width: 720px;
    height: auto;
    position: absolute;
    bottom: 160px;
    left: 50%;
    transform: translate(-50%, -50%);
}

#landscape{
    width: 100%;
    height: 100vh;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background: url('../img/10_sonstiges/landscape.jpg') no-repeat center bottom;
    background-size: cover;
}

.landscape{
    width: 100%;
    height:auto;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.hide-landscape{
    display: none;
}

#mobileControl{
    display:none;
    opacity: 0.7;
}

.gap{
    display: flex;
    gap:24px;
}

.mobile-controls{
    height:40px;
    width:40px;
}

/*Media Querrys*/
@media only screen and (max-width: 960px) {
   canvas{
        width: 100vw;
        height: 100vh;
   }
   #mobileControl{
        width:90%;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        position: absolute;
        bottom: 16px;
   }
   .start-screen {
        max-width: 100%;
        height: 100vh;
        background-size: cover;
    }
    .start-wrapper{
        max-width: 100%;
        height: auto;
    }
    .start{
        max-width: 100%;
        height: auto;
    }
    .show-controls img {
        max-width: 40%;
        height: auto;
        position: absolute;
        top: 30px;
        opacity: 0.9;
    }
    h1{
        display: none;
    }
    .control-img {
        display: none;
    }
    .game-btn{
        margin: 0;
        position: absolute;
        top:48px;
        width: 120px;
        height: auto;
        font-size: 14pt;
        z-index: 9999;
    }
    .btn{
        position: relative;
        left:0;
        top:50%;
        width: 32px;
        height: 32px;
    }
    .settings-btn{
       flex-direction: column;
       align-items: flex-start;
       left:8px;
       bottom:110px;

    }
    #activateFs{
        display: none;
    }
    .audio-off, .audio-on, .disable-fs, .activate-fs{
        width: 24px !important;
        height: 24px !important;
    }
    .story-btn{
        position: relative;
        top:44px;
        left:8px;
    }
}

@media only screen and (max-width: 500px) {
    canvas{
        height: 100vh;
    }
    .hide-landscape{
        display: flex;
    }
    .landscape{
        height:100%;
        width: auto;
    }
 }

